[project]
name = "quantum-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "qiskit",
    "qiskit-ibm-runtime",
    "qiskit_serverless",
    "qiskit-ibm-catalog",
    "qiskit-ibm-transpiler",
    "qiskit-addon-sqd",
    "qiskit-addon-aqc-tensor[quimb-jax]",
    "qiskit-addon-obp",
    "qiskit-addon-mpf",
    "jupyter",
    "qiskit[visualization]"
]
