[project]
name = "quantum-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "qiskit>=1.0.0,<2.0.0",
    "qiskit-ibm-runtime==0.27.1",
    "qiskit_serverless",
    "qiskit-ibm-catalog",
    "qiskit-ibm-transpiler",
    "qiskit-addon-sqd",
    "qiskit-addon-aqc-tensor[quimb-jax]",
    "qiskit-addon-obp",
    "qiskit-addon-mpf",
    "qiskit-optimization",
    "jupyter",
    "qiskit[visualization]",
    "appnope",
    "pre-commit",
    "nbstripout",
    "qiskit-aer",
    "numpy",
    "networkx"
]
